unpackaged/main/default/objects/project_cloud__Cross_Project_Dependency__c/project_cloud__Cross_Project_Dependency__c.object-meta.xml
<CustomObject>
    <label>Cross Project Dependency</label>
    <nameField>
        <displayFormat>CPD-{0}</displayFormat>
        <label>Cross Project Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross Project Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>