unpackaged/main/default/objects/project_cloud__Cross_Project_Dependency__c/fields/project_cloud__Project_Child__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Cross Project Dependencies (Child Project)</relationshipLabel>
    <relationshipName>Cross_Project_Dependencies3</relationshipName>
    <type>Lookup</type>
</CustomField>