unpackaged/main/default/objects/project_cloud__Cross_Project_Dependency__c/fields/project_cloud__Project_Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Cross Project Dependencies (Parent Project)</relationshipLabel>
    <relationshipName>Cross_Project_Dependencies2</relationshipName>
    <type>Lookup</type>
</CustomField>