unpackaged/main/default/objects/project_cloud__Cross_Project_Dependency__c/fields/project_cloud__Project_Task_Parent__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Cross Project Dependencies</relationshipLabel>
    <relationshipName>Cross_Project_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>